@@ -1218,8 +1218,9 @@
 1) goahead: fix rebuild some script.<br>
 2) init.d: remove unneded delete generated by goahead scripts logic.<br>
 3) kernel: ralink_wifi: xxxx: fix fallback to 20MHz in some cases.<br>
-4) kernel: mips: handle page faults of executable but unreadable pages.<br>
-5) kernel: net: arp: filter NOARP neighbours for SIOCGARP.<br>
+4) kernel: ralink_wifi: xxxx: fix mpdu default settings in some cases.<br>
+5) kernel: mips: handle page faults of executable but unreadable pages.<br>
+6) kernel: net: arp: filter NOARP neighbours for SIOCGARP.<br>
 <br>
 <br>
 <b>TODO:</b><br>
